fix 100vh on mobile

--- a/src/styles/layout/_l-onboarding.scss
+++ b/src/styles/layout/_l-onboarding.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   // max-height: 640px;
   // max-width: 380px;
@@ -207,6 +207,8 @@
 
 @include media-breakpoint-up(lg) {
   .l-onboarding {
+    height: 100vh;
+
     .slides {
       .slide-content {
         max-width: 60%;
